--- a/src/app/main-conten/hero/hero.component.html
+++ b/src/app/main-conten/hero/hero.component.html
@@ -1,7 +1,7 @@
 <header>
   <div class="hero-left">
     <div>
-      <a href="#contact">CONTACT ME</a>
+      <a href="#contact" [innerHTML]="safeContactME"></a>
 
       <div class="arrow-container">
         <a class="icon" href="#contact"></a>
