--- a/src/app/legal-notice/legal-notice.component.scss
+++ b/src/app/legal-notice/legal-notice.component.scss
@@ -1,17 +1,21 @@
 @import "../../mixin.scss";
 @import "../../styles.scss";
 :host{
-  width: 100vh;
+  @include flex-center($fd:column,$ai:flex-start );
+  width: 100%;
   height: 100%;
+  max-width: $max-width;
+  margin-top: 6rem;
 }
+
+$color-bg: #ffffff;
+$color-bg-alt: #f9f9f9;
+$color-primary: #333333;
+$color-accent: #0077cc;
+$font-stack: 'Helvetica Neue', Arial, sans-serif;
 
 
 .imprintContainer {
-  margin-top: 106px;
-  background-color: $color-bg-alt;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
   padding: 2rem;
 }
 
@@ -26,6 +30,7 @@
   font-family: $font-stack;
   color: $color-primary;
   line-height: 1.6;
+
 
 
   h2 {
