--- a/src/app/main-conten/main-content/main-content.component.html
+++ b/src/app/main-conten/main-content/main-content.component.html
@@ -1,11 +1,12 @@
-<app-hero id="hero"></app-hero>
-<app-about id="about"></app-about>
+<app-hero></app-hero>
+<app-about></app-about>
 <app-skills id="skills"></app-skills>
-<h2>My Projects</h2>
+<h2 [innerHTML]="safeMyProjects"></h2>
 <section id="projects">
-  <ng-container *ngFor="let project of projects; let i = index">
-    <app-projects [project]="project" [isRowReverse]="i % 2 === 1"></app-projects>
-  </ng-container>
+  <app-projects
+    [projectsEn]="projectsEn"
+    [projectsDe]="projectsDe"
+  ></app-projects>
 </section>
 <app-testimonials id="testimonials"></app-testimonials>
 <app-contact id="contact"></app-contact>
