--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -1,34 +1,37 @@
 <nav>
   <ul class="display-none">
     <li><a href="#">&lt;FG&gt;</a></li>
-    <li><a href="#about">Why me</a></li>
-    <li><a href="#skills">Skills</a></li>
-    <li><a href="#projects">Projects</a></li>
-    <li><a href="#contact">Contact</a></li>
+    <li><a href="#about"    [innerHTML]="safeNav.whyMe"></a></li>
+    <li><a href="#skills"   [innerHTML]="safeNav.skills"></a></li>
+    <li><a href="#projects" [innerHTML]="safeNav.projects"></a></li>
+    <li><a href="#contact"  [innerHTML]="safeNav.contact"></a></li>
   </ul>
-  <span class="display-none">
-    <p>DE</p>
-    |
-    <p>EN</p>
-  </span>
-  <a class="show logo-mobile " href="#">&lt;FG&gt;</a>
+<span class="display-none">
+  <button 
+          [class.active]="(currentLang$ | async) === 'de'"
+          (click)="switchLang('de')">
+    DE
+  </button>
+  |
+  <button
+    [class.active]="(currentLang$ | async) === 'en'"
+    (click)="switchLang('en')">
+    EN
+  </button>
+</span>
+  <a class="show logo-mobile" href="#">&lt;FG&gt;</a>
+
   <div class="burger-menu show" [class.open]="menuOpen">
     <button class="show" (click)="toggleMenu()">
-      <span></span>
-      <span></span>
-      <span></span>
+      <span></span><span></span><span></span>
     </button>
-
- 
     <ul *ngIf="menuOpen">
-      <li><a class="show" href="#about">Why me</a></li>
-      <li><a class="show" href="#skills">Skills</a></li>
-      <li><a class="show" href="#projects">Projects</a></li>
-      <li><a class="show" href="#contact">Contact</a></li>
+      <li><a class="show" href="#about"    [innerHTML]="safeNav.whyMe"></a></li>
+      <li><a class="show" href="#skills"   [innerHTML]="safeNav.skills"></a></li>
+      <li><a class="show" href="#projects" [innerHTML]="safeNav.projects"></a></li>
+      <li><a class="show" href="#contact"  [innerHTML]="safeNav.contact"></a></li>
       <li>
-        <p>DE</p>
-        |
-        <p>EN</p>
+        <p>DE</p> | <p>EN</p>
       </li>
     </ul>
   </div>
