Added Pokedex project, updated Legal Notice and Impressum, improved responsiveness and optimized form submission

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,10 @@
 @import "../mixin.scss";
 @import "../styles.scss";
 
+main{
+    box-sizing: border-box;
+    position: relative;
+}
 
 header{
     width: 100%;
