--- a/src/app/main-conten/skills/skills.component.html
+++ b/src/app/main-conten/skills/skills.component.html
@@ -1,5 +1,5 @@
 <div class="main-container">
-  <h2 [innerHTML]="safe.mySkills"></h2>
+  <h2 id="skills" [innerHTML]="safe.mySkills"></h2>
   <div class="skills-icons">
     <div>
       <img src="assets/img/type-script.svg" alt="TypeScript" />
