--- a/src/app/main-conten/about/about.component.scss
+++ b/src/app/main-conten/about/about.component.scss
@@ -4,11 +4,12 @@
 :host {
   @include flex-center($ai: normal);
   width: 100%;
-  height: 100%;
+  height: 100vh;
+  margin-bottom: 1.5rem;
 }
 
 .main-container {
-  @include flex-center($jc: space-between, $ai: normal);
+  @include flex-center($jc: space-between, $ai:center);
   width: 100%;
   max-width: $max-width;
   height: 100%;
@@ -30,7 +31,7 @@
     @include fonts();
     text-align: right;
     margin-bottom: $gap-24;
-    scroll-margin-top: 90px;
+    scroll-margin-top: 100px;
   }
 
   h3 {
@@ -182,4 +183,14 @@
   display: none;
 }
 
+@media (max-width: 768px) {
 
+  h1 {
+    white-space: normal !important;
+    text-align: center !important;
+  }
+  h2 {
+    white-space: normal !important;
+    text-align: center !important;
+  }
+}
