--- a/src/app/main-conten/contact/contact.component.scss
+++ b/src/app/main-conten/contact/contact.component.scss
@@ -17,6 +17,7 @@
   }
   > h2 {
     @include fonts();
+    scroll-margin-top: 100px;
   }
 }
 .form-container {
@@ -162,11 +163,12 @@ form {
     @include flex-center($jc: flex-start);
 
     input[type="checkbox"] {
-      margin-right: 0.5rem;
+      position: relative;
+      margin-right: 8px;
       appearance: none;
       -webkit-appearance: none;
-      width: 1.125rem;
-      height: 1.125rem;
+      width: 15px;
+      height: 15px;
       border: 2px solid $primary-red;
       border-radius: 3px;
       cursor: pointer;
@@ -182,23 +184,14 @@ form {
         &::after {
           content: "";
           position: absolute;
-          top: 0.125rem;
-          left: 0.3125rem;
-          width: 0.1875rem;
-          height: 0.375rem;
+          top:    0px;
+          left:   3px;
+          width:  3px;
+          height: 6px;
           border: solid $primary-red;
           border-width: 0 2px 2px 0;
           transform: rotate(45deg);
         }
-      }
-    }
-
-    a {
-      color: $primary-red;
-      margin: 0 0.5rem;
-
-      &:hover {
-        text-decoration: underline;
       }
     }
   }
@@ -309,4 +302,15 @@ textarea.error::placeholder {
   font-weight: $regular !important;
   color: $error-red !important;
   opacity: 100% !important;
+}
+@media (max-width: 768px) {
+
+  h1 {
+    white-space: normal !important;
+    text-align: center !important;
+  }
+  h2 {
+    white-space: normal !important;
+    text-align: center !important;
+  }
 }
