--- a/src/app/main-conten/hero/hero.component.scss
+++ b/src/app/main-conten/hero/hero.component.scss
@@ -6,6 +6,7 @@
   width: 100%;
   height: 100%;
   margin-top: 5.875rem;
+  margin-bottom: 1.5rem;
 }
 header {
   @include flex-center($ai: space-between, $jc: space-between);
@@ -91,4 +92,15 @@ h1 {
 h2 {
   @include fonts($fc: $turquoise);
   white-space: nowrap;
+}
+@media (max-width: 768px) {
+
+  h1 {
+    white-space: normal !important;
+    text-align: center !important;
+  }
+  h2 {
+    white-space: normal !important;
+    text-align: center !important;
+  }
 }
