--- a/src/app/main-conten/projects/projects.component.scss
+++ b/src/app/main-conten/projects/projects.component.scss
@@ -12,8 +12,11 @@
   height: auto;
   max-width: $max-width;
   margin-bottom: 2rem;
-}
 
+}
+  .project-container:nth-child(2n) {
+    flex-direction: row-reverse;
+  }
 .image-container {
   position: relative;
   width: auto; 
@@ -68,5 +71,16 @@ h5{
     color:$primary-red ; 
   }
     
+  }
+}
+@media (max-width: 768px) {
+
+  h1 {
+    white-space: normal !important;
+    text-align: center !important;
+  }
+  h2 {
+    white-space: normal !important;
+    text-align: center !important;
   }
 }
