--- a/src/app/main-conten/skills/skills.component.scss
+++ b/src/app/main-conten/skills/skills.component.scss
@@ -7,6 +7,7 @@
   @include flex-center();
   width: 100%;
   height: 100%;
+  margin-bottom: 1.5rem;
 }
 
 .main-container {
@@ -19,6 +20,7 @@
     width: 100%;
     text-align: left;
     margin-bottom: 1.5rem;
+    scroll-margin-top: 100px;
   }
 }
 
@@ -80,5 +82,16 @@
     padding: 0.9375rem 1.875rem;
     background-color: $turquoise;
     margin-top: 20px;
+  }
+}
+@media (max-width: 768px) {
+
+  h1 {
+    white-space: normal !important;
+    text-align: center !important;
+  }
+  h2 {
+    white-space: normal !important;
+    text-align: center !important;
   }
 }
