--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -23,6 +23,7 @@
 
     a {
       @include fonts($fs: $f-s-14);
+      margin: 5px;
       &:hover {
         text-decoration: underline;
       }
@@ -82,7 +83,7 @@
 }
 
 .middle-container-mobile {
- display: none;
+  display: none;
   @include fonts($fs: $f-s-18);
   text-align: center;
 }
