feat: add shipment confirmation on form submission and enhance responsive design

--- a/src/app/main-conten/about/about.component.html
+++ b/src/app/main-conten/about/about.component.html
@@ -12,12 +12,12 @@
     <div class="icon-container">
       <div>
         <div class="maobile-arrow-curve-left w-90">
-          <img src="assets/img/arrow-curve-left .svg" alt="">
+          <img src="assets/img/arrow-curve-left .svg" alt="arrow curve left icon">
         </div>
         <h3 [innerHTML]="safe.iAm"></h3>
         <div class="locaishen-container display-flex">
           <div>
-            <img src="assets/img/locaishen-sign .svg" alt="" />
+            <img src="assets/img/locaishen-sign .svg" alt="locaishen icon" />
             <div class="elipse"></div>
           </div>
           <p [innerHTML]="safe.located">
@@ -31,7 +31,7 @@
             src="assets/img/arrow-curve-left .svg"
             alt=""
           />
-          <img src="assets/img/suitcase .svg" alt="" />
+          <img src="assets/img/suitcase .svg" alt="suitcase icon" />
           <p [innerHTML]="safe.openRelocate">
           </p>
         </div>
@@ -39,7 +39,7 @@
 
       <div>
         <div class="laptop display-flex">
-          <img src="assets/img/remote-signal.svg" alt="" />
+          <img src="assets/img/remote-signal.svg" alt="remote signal icon" />
           <img
             class="signal"
             src="assets/img/remote-signal-strong.svg"
@@ -50,18 +50,18 @@
           <img
             class="arrow-curve-right"
             src="assets/img/arrow-curve-right.svg"
-            alt=""
-          /><img src="" alt="" />
+            alt="arrow curve right icon"
+          />
         </div>
 
-        <img class="arrow-curly" src="assets/img/arrow-curly.svg" alt="" /><img
+        <img class="arrow-curly" src="assets/img/arrow-curly.svg" alt="arrow curly icon" /><img
           src=""
           alt=""
         />
       </div>
     </div>
     <div class="maobile-arrow-curve-right w-90">
-      <img src="assets/img/arrow-curve-right.svg" alt="">
+      <img src="assets/img/arrow-curve-right.svg" alt="arrow icon">
     </div>
     <div><a href="#contact" [innerHTML]="safe.letsTalk"></a></div>
   </div>
