--- a/src/app/main-conten/projects/projects.component.html
+++ b/src/app/main-conten/projects/projects.component.html
@@ -11,7 +11,7 @@
           (mouseenter)="playVideo(hoveredVideo)"
           (mouseleave)="resetVideo(hoveredVideo)"
         >
-          <source [src]="project.videoUrl" type="video/mp4" />
+          <source [src]="project.videoUrl" type="video/webm" />
           Dein Browser unterstützt das Video-Tag nicht.
         </video>
       </a>
