--- a/src/styles.scss
+++ b/src/styles.scss
@@ -310,7 +310,7 @@ p {
   }
 
   app-testimonials {
-    overflow-x: scroll;
+    overflow-x: auto;
     align-items: flex-start !important;
     width: 97.9vw;
   }
