--- a/src/app/main-conten/hero/hero.component.html
+++ b/src/app/main-conten/hero/hero.component.html
@@ -13,6 +13,6 @@
     </div>
   </div>
   <div class="img-container">
-    <img src="assets/img/b-img1.png" alt="" />
+    <img src="assets/img/b-img1.png" alt="Illustration of frontend development" />
   </div>
 </header>
