--- a/src/styles.scss
+++ b/src/styles.scss
@@ -236,6 +236,7 @@ p {
   .main-container {
     align-items: center !important;
     flex-direction: column !important;
+    justify-content: center !important;
     .img-container {
       max-width: 25rem !important;
       width: 100%;
