--- a/src/app/main-conten/hero/hero.component.html
+++ b/src/app/main-conten/hero/hero.component.html
@@ -4,7 +4,7 @@
       <a href="#contact" [innerHTML]="safeContactME"></a>
 
       <div class="arrow-container">
-        <a class="icon" href="#contact"></a>
+        <a class="icon" href="#about"></a>
       </div>
     </div>
     <div class="hero-text">
