--- a/src/app/main-conten/skills/skills.component.html
+++ b/src/app/main-conten/skills/skills.component.html
@@ -31,7 +31,10 @@
     </div>
     <div>
       <img src="assets/img/scrum.svg" alt="Scrum" />
-      <h6>Scrum</h6>
+      <h6>
+        <br />
+        Scrum
+      </h6>
     </div>
     <div>
       <img src="assets/img/material-design.svg" alt="Material Design" />
