--- a/src/app/legal-notice/legal-notice.component.scss
+++ b/src/app/legal-notice/legal-notice.component.scss
@@ -1,24 +1,19 @@
 @import "../../mixin.scss";
 @import "../../styles.scss";
-:host{
-  @include flex-center($fd:column ,$jc:flex-start);
+:host {
+  @include flex-center($fd: column, $jc: flex-start);
   width: 100%;
-  height: 100vh;
-  max-width: $max-width;
   margin-top: 7rem;
-
-
+  height: calc(100vh - 7rem - 12.25rem);
+  min-height: 462px;
+  max-width: $max-width;
 }
 
 $color-bg: #ffffff;
 $color-bg-alt: #f9f9f9;
 $color-primary: #333333;
 $color-accent: #0077cc;
-$font-stack: 'Helvetica Neue', Arial, sans-serif;
-
-
-
-
+$font-stack: "Helvetica Neue", Arial, sans-serif;
 
 .imprintContainer {
   background-color: $color-bg;
@@ -32,8 +27,6 @@ $font-stack: 'Helvetica Neue', Arial, sans-serif;
   line-height: 1.6;
   box-sizing: border-box;
 
-
-
   h2 {
     font-size: 1.75rem;
     margin-top: 1.5rem;
@@ -43,14 +36,11 @@ $font-stack: 'Helvetica Neue', Arial, sans-serif;
     border-bottom: 2px solid $color-accent;
   }
 
-
   p {
     margin: 0.5rem 0;
   }
 
-
   a {
- 
     text-decoration: none;
     color: $color-accent;
     font-weight: 500;
@@ -68,8 +58,9 @@ $font-stack: 'Helvetica Neue', Arial, sans-serif;
       margin-right: 0.5rem;
     }
   }
-
-
 }
-
-
+@media (max-width: 768px) {
+  :host {
+    height: calc(100vh - 7rem - 14rem);
+  }
+}
