--- a/src/app/main-conten/about/about.component.scss
+++ b/src/app/main-conten/about/about.component.scss
@@ -4,12 +4,12 @@
 :host {
   @include flex-center($ai: normal);
   width: 100%;
-  height: 100vh;
-  margin-bottom: 1.5rem;
+  margin-bottom: 10rem;
+  box-sizing: border-box;
 }
 
 .main-container {
-  @include flex-center($jc: space-between, $ai:center);
+  @include flex-center($jc: space-between, $ai: center);
   width: 100%;
   max-width: $max-width;
   height: 100%;
@@ -17,13 +17,14 @@
 .about-right {
   @include flex-center($fd: column, $ai: flex-end, $jc: space-between);
   width: 55%;
+  height: 87vh;
+  min-height: 553.312px;
   > div:nth-child(1) {
     margin-bottom: 1.5rem;
   }
   > div:nth-child(2) {
     > div {
       margin-bottom: 1rem;
-    
     }
   }
 
@@ -31,7 +32,7 @@
     @include fonts();
     text-align: right;
     margin-bottom: $gap-24;
-    scroll-margin-top: 150px;
+    scroll-margin-top: 6.25rem;
   }
 
   h3 {
@@ -43,7 +44,6 @@
   p {
     @include fonts($fc: $turquoise, $fs: $f-s-18);
     text-align: right;
-    
   }
   a {
     @include fonts($fs: $f-s-18, $fc: $backround-blue);
@@ -174,26 +174,30 @@
   }
 }
 
-
-.display-flex{
+.display-flex {
   @include flex-center();
 }
 
-.maobile-arrow-curve-left,.maobile-arrow-curve-right{
+.maobile-arrow-curve-left,
+.maobile-arrow-curve-right {
   display: none;
 }
 
 @media (max-width: 768px) {
-
+  .about-right{
+    height: 50vh;
+  }
   h1 {
     white-space: normal !important;
     text-align: center !important;
   }
   h2 {
+    scroll-margin-top: 280px !important;
     white-space: normal !important;
     text-align: center !important;
   }
-  h3{
+  h3 {
     margin-bottom: 20px;
+   font-size:2.375rem !important;
   }
 }
