--- a/src/app/main-conten/hero/hero.component.scss
+++ b/src/app/main-conten/hero/hero.component.scss
@@ -6,7 +6,8 @@
   width: 100%;
   height: 100%;
   margin-top: 5.875rem;
-  margin-bottom: 1.5rem;
+  margin-bottom: 10rem;
+  box-sizing: border-box;
 }
 header {
   @include flex-center($ai: space-between, $jc: space-between);
