--- a/src/app/main-conten/skills/skills.component.scss
+++ b/src/app/main-conten/skills/skills.component.scss
@@ -7,7 +7,8 @@
   @include flex-center();
   width: 100%;
   height: 100%;
-  margin-bottom: 1.5rem;
+  margin-bottom: 10rem;
+  box-sizing: border-box;
 }
 
 .main-container {
@@ -19,8 +20,8 @@
     @include fonts($fw: $bold);
     width: 100%;
     text-align: left;
-    margin-bottom: 1.5rem;
-    scroll-margin-top: 100px;
+    margin-bottom: 3.125rem;
+    scroll-margin-top: 6.25rem;
   }
 }
 
@@ -29,7 +30,7 @@
   grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   width: 100%;
   justify-items: center;
-  gap: $gap-32;
+  gap: 3rem;
 
   > div {
     @include flex-center($fd: column);
@@ -37,6 +38,7 @@
 
     img {
       width: 3.75rem;
+      margin-bottom: 1rem;
     }
 
     h6 {
@@ -48,7 +50,6 @@
   .challenge-container {
     display: flex;
     align-items: center;
-    gap: $gap-16;
     position: relative;
 
     p {
@@ -93,5 +94,17 @@
   h2 {
     white-space: normal !important;
     text-align: center !important;
+    scroll-margin-top: 280px !important;
+  
+  }
+  h6{
+    display: none !important;
   }
 }
+@media (min-width: 1062px) and (max-width: 1360px) {
+  .challenge-container p {
+    top: 113%;
+    left: -50%!important;
+  }
+}
+
