--- a/src/app/main-conten/testimonials/testimonials.component.scss
+++ b/src/app/main-conten/testimonials/testimonials.component.scss
@@ -6,7 +6,8 @@
 
 :host {
   @include flex-center($fd:column);
-  margin-bottom: 1.5rem;
+  margin-bottom: 10rem;
+  box-sizing: border-box;
 
 }
 
@@ -36,7 +37,7 @@
 h4 {
   @include fonts($fw:$bold,$fs:$f-s-24);
   white-space: nowrap;
-  margin-bottom: 1.5rem;
+  padding: 1.5rem 0 ;
 }
 h5 {
   @include fonts($fs:$f-s-18,$fc:$turquoise);
